newtc/src/featurez/syntax/snapshots/tests__expr_starting_whitespace_is_fine.snap
---
created: "2019-11-08T15:26:36.945303Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: approval_document
---
====text====
============

    1*2
====tokens====
============
[
    WhiteSpace[5],
    IntegerLiteral[1],
    Star[1],
    IntegerLiteral[1],
    EndOfFile[0]
]
====events====
============
[
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: Some(
            4
        )
    },
    Trivia {
        kind: WhiteSpace,
        length: 5
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: None
    },
    Token {
        kind: Star,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode
]
====tree====
============
┗ BinaryExpr
  ┠ LiteralExpr
  ┃ ┠ WhiteSpace '
    '
  ┃ ┗ IntegerLiteral '1'
  ┠ Star '*'
  ┗ LiteralExpr
    ┗ IntegerLiteral '2'

