newtc/src/featurez/syntax/snapshots/tests__unary_operators_are_properly_grouped.snap
---
created: "2019-10-10T14:12:36.893204Z"
creator: insta@0.8.1
source: newtc/src/featurez/syntax/tests.rs
expression: approval_document
---
====text====
============
-1*2+-3
====tokens====
============
[
    Minus[1],
    IntegerLiteral[1],
    Star[1],
    IntegerLiteral[1],
    Plus[1],
    Minus[1],
    IntegerLiteral[1],
    EndOfFile[0]
]
====events====
============
[
    BeginNode {
        kind: UnaryExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: Minus,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: Some(
            3
        )
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: Some(
            6
        )
    },
    Token {
        kind: Star,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode,
    BeginNode {
        kind: BinaryExpr,
        is_forward_parent: true,
        forward_parent_offset: None
    },
    Token {
        kind: Plus,
        length: 1
    },
    BeginNode {
        kind: UnaryExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: Minus,
        length: 1
    },
    BeginNode {
        kind: LiteralExpr,
        is_forward_parent: false,
        forward_parent_offset: None
    },
    Token {
        kind: IntegerLiteral,
        length: 1
    },
    EndNode,
    EndNode,
    EndNode,
    EndNode
]
====tree====
============
┗ UnaryExpr
  ┠ Minus
  ┗ BinaryExpr
    ┠ BinaryExpr
    ┃ ┠ LiteralExpr
    ┃ ┃ ┗ IntegerLiteral
    ┃ ┠ Star
    ┃ ┗ LiteralExpr
    ┃   ┗ IntegerLiteral
    ┠ Plus
    ┗ UnaryExpr
      ┠ Minus
      ┗ LiteralExpr
        ┗ IntegerLiteral

